登录接口实现

--- a/后端代码步骤.md
+++ b/后端代码步骤.md
@@ -10,7 +10,11 @@
 
 1. 创建数据库模型
 2. 模拟数据同步到数据库
-3. 后端程序的编写，业务逻辑的编写。(services文件)
+3. 搭建静态服务器
+4. 解析网站支持的请求体，这里支持 (application/x-www-form-urlencoded，application/json)格式的请求体
+5. 登录成功后，加入cookie，验证token
+6. token中间件，用于验证哪些接口需要登录后，才可以访问。
+7. 后端程序的编写，业务逻辑的编写。(services文件)
     1. 管理员业务逻辑的编写。
         1. 管理员只能有一个超级管理员。
         2. 后台只有超级管理员可以登录
@@ -23,5 +27,5 @@
     3. 歌曲业务逻辑的编写
         1. 添加歌曲，包含的内容：歌名(sing)，歌手(singer)，专辑(album)，间隔时间(duration)，是否喜欢(isLike)，歌词(lyric)。
         2. 删除歌曲，根据id删除歌曲。
-4. 中间件的编写。(routers文件)
-5. 数据接口的编写。(routers/api文件)
+8. 中间件的编写。(routers文件)
+9. 数据接口的编写。(routers/api文件)
